fix issue with wrapping

--- a/public/components/Landing.styl
+++ b/public/components/Landing.styl
@@ -37,6 +37,7 @@ maximumSize()
     padding 50px 0
     margin-left auto
     margin-right auto
+    text-align center
 
 .landing__section:before
     display table
@@ -62,4 +63,4 @@ maximumSize()
     color black
 
 .landing__section__pre
-    white-space pre
+    white-space pre-wrap
